--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@typescript-eslint/eslint-plugin": "^7.18.0",
 		"@typescript-eslint/parser": "^7.18.0",
 		"@vitejs/plugin-react-swc": "^3.7.1",
+		"autoprefixer": "^10.4.20",
 		"eslint": "^9.14.0",
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-import": "^2.31.0",
@@ -37,7 +38,9 @@
 		"eslint-plugin-unused-imports": "^3.2.0",
 		"jsdom": "^24.1.3",
 		"lint-staged": "^13.3.0",
+		"postcss": "^8.4.47",
 		"prettier": "^2.8.8",
+		"tailwindcss": "^3.4.14",
 		"tslint-config-prettier": "^1.18.0",
 		"typescript": "^5.6.3",
 		"vite": "^5.4.10",
