--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"vite-plugin-require-transform": "^1.0.21"
 	},
 	"devDependencies": {
+		"@faker-js/faker": "^9.2.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^14.3.1",
 		"@types/jest": "^29.5.14",
