--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,9 @@
 		"lib": ["ES2020", "DOM", "DOM.Iterable"],
 		"module": "ESNext",
 		"skipLibCheck": true,
-
+    "esModuleInterop": true,
+    "moduleResolution": "Bundler",
 		/* Bundler mode */
-		"moduleResolution": "bundler",
 		"allowImportingTsExtensions": true,
 		"resolveJsonModule": true,
 		"isolatedModules": true,
