--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
 	"dependencies": {
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-icons": "^5.3.0",
 		"react-router-dom": "^6.28.0",
 		"vite-plugin-require-transform": "^1.0.21"
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^14.3.1",
+		"@testing-library/user-event": "^14.5.2",
 		"@types/jest": "^29.5.14",
 		"@types/node": "^20.17.6",
 		"@types/react": "^18.3.12",
