--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,30 @@
 {
 	"compilerOptions": {
-		"target": "ES2020",
-		"useDefineForClassFields": true,
-		"lib": ["ES2020", "DOM", "DOM.Iterable"],
-		"module": "ESNext",
-		"skipLibCheck": true,
-
-		/* Bundler mode */
-		"moduleResolution": "bundler",
-		"allowImportingTsExtensions": true,
-		"resolveJsonModule": true,
-		"isolatedModules": true,
-		"noEmit": true,
-		"jsx": "react-jsx",
-		"types": ["@testing-library/jest-dom"],
-		/* Linting */
-		"strict": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"noFallthroughCasesInSwitch": true
+	  "target": "ES2020",
+	  "useDefineForClassFields": true,
+	  "lib": ["ES2020", "DOM", "DOM.Iterable"],
+	  "module": "ESNext",
+	  "skipLibCheck": true,
+  
+	  /* Bundler mode */
+	  "moduleResolution": "bundler",
+	  "allowImportingTsExtensions": true,
+	  "resolveJsonModule": true,
+	  "isolatedModules": true,
+	  "noEmit": true,
+	  "jsx": "react-jsx",
+  
+	  /* Linting */
+	  "strict": true,
+	  "noUnusedLocals": true,
+	  "noUnusedParameters": true,
+	  "noFallthroughCasesInSwitch": true,
+	  "baseUrl": ".",
+	  "paths": {
+		"@/*": ["./src/*"]
+	  },
+	  "typeRoots": ["./node_modules/@types", "./src/types"]
 	},
-	"include": ["src", "test/vite.setup.tsx"],
+	"include": ["src", "test/vitest.setup.tsx"],
 	"references": [{ "path": "./tsconfig.node.json" }]
-}
+  }
