--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.3.0",
-		"react-router-dom": "^6.28.0"
+		"react-router-dom": "^6.28.0",
+		"swr": "^2.2.5"
 	},
 	"devDependencies": {
-		"@faker-js/faker": "^9.2.0",
 		"@eslint/js": "^9.14.0",
+		"@faker-js/faker": "^9.2.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^14.3.1",
 		"@testing-library/user-event": "^14.5.2",
